src/snapshots/templates__scanner__test__scan_builder_block.snap
---
source: src/scanner.rs
assertion_line: 471
expression: "Hello {[ builder ]}, good to meet you"

---
[
    (
        Text(
            "Hello ",
        ),
        0..6,
    ),
    (
        OpenBuilder,
        6..7,
    ),
    (
        Identifier(
            "builder",
        ),
        9..16,
    ),
    (
        CloseBuilder,
        17..18,
    ),
    (
        Text(
            ", good to meet you",
        ),
        19..36,
    ),
]
