src/snapshots/templates__scanner__test__scan_for_from_expression.snap
---
source: src/scanner.rs
expression: "Hello {% for item as Item in list.take(list, 2) %}{{ item }}{% endfor %}"
---
[
    (
        Text(
            "Hello ",
        ),
        0..6,
    ),
    (
        OpenStmt,
        6..7,
    ),
    (
        For,
        9..12,
    ),
    (
        IdentifierOrGleamToken(
            "item",
        ),
        13..17,
    ),
    (
        As,
        18..20,
    ),
    (
        IdentifierOrGleamToken(
            "Item",
        ),
        21..25,
    ),
    (
        In,
        26..28,
    ),
    (
        IdentifierOrGleamToken(
            "list.take(list,",
        ),
        29..44,
    ),
    (
        IdentifierOrGleamToken(
            "2)",
        ),
        45..47,
    ),
    (
        CloseStmt,
        48..49,
    ),
    (
        OpenValue,
        50..51,
    ),
    (
        IdentifierOrGleamToken(
            "item",
        ),
        53..57,
    ),
    (
        CloseValue,
        58..59,
    ),
    (
        OpenStmt,
        60..61,
    ),
    (
        EndFor,
        63..69,
    ),
    (
        CloseStmt,
        70..71,
    ),
]
