src/snapshots/templates__scanner__test__scan_identifier.snap
---
source: src/scanner.rs
expression: "Hello {{ name }}, good to meet you"
---
[
    (
        Text(
            "Hello ",
        ),
        0..6,
    ),
    (
        OpenValue,
        6..7,
    ),
    (
        GleamToken(
            "name",
        ),
        9..13,
    ),
    (
        CloseValue,
        14..15,
    ),
    (
        Text(
            ", good to meet you",
        ),
        16..33,
    ),
]
