src/snapshots/templates__scanner__test__scan_if_comparison.snap
---
source: src/scanner.rs
expression: "Hello {% if items != [] %}Some items{% endif %}"
---
[
    (
        Text(
            "Hello ",
        ),
        0..6,
    ),
    (
        OpenStmt,
        6..7,
    ),
    (
        If,
        9..11,
    ),
    (
        IdentifierOrGleamToken(
            "items",
        ),
        12..17,
    ),
    (
        IdentifierOrGleamToken(
            "!=",
        ),
        18..20,
    ),
    (
        IdentifierOrGleamToken(
            "[]",
        ),
        21..23,
    ),
    (
        CloseStmt,
        24..25,
    ),
    (
        Text(
            "Some items",
        ),
        26..36,
    ),
    (
        OpenStmt,
        36..37,
    ),
    (
        EndIf,
        39..44,
    ),
    (
        CloseStmt,
        45..46,
    ),
]
